devops/argocd/comfyui/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: comfyui
  labels:
    name: comfyui
