devops/argocd/comfyui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui
  namespace: comfyui
  labels:
    scale.off-replicas: "0"
    scale.on-replicas: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comfyui
  template:
    metadata:
      labels:
        app: comfyui
    spec:
      runtimeClassName: nvidia
      volumes:
        - name: nas
          nfs:
            server: 192.168.88.25
            path: /mnt/data/k8s/ai/comfy
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
      containers:
        - name: comfyui
          image: zeroclue/comfyui:base-torch2.8.0-cu126
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: nas
              mountPath: /workspace
          resources:
            limits:
              nvidia.com/gpu: 1
            requests:
              nvidia.com/gpu: 1
